Collection & remove list ','